syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "DatabaseHistoryProto";
option java_multiple_files = true;

import "record_metadata_options.proto";

// In the subsequent deletion or addition of dropp-related property fields,
// dropped_time is a mandatory field because business logic depends on time to determine whether it is a Dropped;
message DatabaseHistory {
  required string event_id = 1;
  required string name = 2;
  required int64  create_time = 3;
  map<string, string> properties = 4;
  required string location = 5;
  required string description = 6;
  required string user_id = 7;
  optional bytes version = 8;
  optional int64 dropped_time = 9;
}

message DatabaseHistoryUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required DatabaseHistory database_history = 1;
}